--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.0",
+    "ejs": "^3.1.8",
+    "fs": "^0.0.1-security",
     "jquery": "^3.6.0",
+    "path-browserify": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,5 +41,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/ejs": "^3.1.1"
+  },
+  "resolve": {
+    "fallback": {
+      "path": false
+    }
   }
 }
